# img2vec

./: .gitignore  README.md  pyproject.toml
example/: test_img_similarity.py
img2vec_pytorch/: img_to_vec.py  test_img_to_vec.py
