[tool.poetry]
name = "img2vec-pytorch"
version = "1.1.1"
description = "Use pre-trained models in PyTorch to extract vector embeddings for any image"
authors = ["Christian Safka <christiansafka@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "img2vec_pytorch"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.0.0"
torchvision = "^0.15.0"


[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
